--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
@@ -58,6 +58,8 @@
         class="px-0 py-2 d-flex justify-content-between"
       >
         {{ context.name }}
+        {{ context.entityType }}
+        {{ context.entityRole }}
       </nb-list-item>
     </nb-list>
   </div>
