--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
@@ -9,7 +9,7 @@
 
   .contexts-panel {
     z-index: 5;
-    background-color: white;
+    background-color: rgba($color: #ffffff, $alpha: 0.7);
     box-shadow: 2px 2px 5px rgba($color: #000000, $alpha: 0.1);
     width: 15rem;
     position: absolute;
