--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
@@ -13,6 +13,10 @@
     box-shadow: 2px 2px 5px rgba($color: #000000, $alpha: 0.1);
     width: 15rem;
     position: absolute;
+    .entity {
+      border-radius: 0.45rem;
+      padding: 0rem 0.3rem 0.1rem 0.3rem;
+    }
   }
 
   .canvas {
