--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -36,8 +36,6 @@
     </span>
   </div>
   <div>Tags</div>
-  <div></div>
-  <div></div>
 </div>
 
 <nb-accordion
@@ -72,7 +70,7 @@
           </nb-tag-list>
         </div>
 
-        <div class="text-right">
+        <div class="actions">
           <button
             nbButton
             ghost
