feat(scenario-designer): Context add component. Improve context panel. Display entities on control component. Msc fixes

--- a/bot/admin/web/src/app/scenarios/scenario-designer/action-edit/action-edit.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/action-edit/action-edit.component.scss
@@ -7,3 +7,9 @@
   min-height: 20vh;
   overflow-y: auto;
 }
+
+.entity {
+  border-radius: 0.45rem;
+  padding: 0rem 0.3rem 0rem 0.3rem;
+  font-size: 0.7rem;
+}
