--- a/bot/admin/web/src/app/scenarios/scenario-designer/action-edit/action-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/action-edit/action-edit.component.html
@@ -111,7 +111,23 @@
                 *ngFor="let inputContext of inputContextNames.value"
                 class="p-2 d-flex justify-content-between font-weight-bold"
               >
-                {{ inputContext }}
+                <div class="d-flex flex-wrap justify-content-between w-100 mr-2">
+                  {{ inputContext }}
+
+                  <ng-container *ngFor="let context of getContextByName(inputContext)">
+                    <span
+                      *ngIf="context?.entityType"
+                      nbTooltip="Entity associated with the context"
+                      class="entity"
+                      [style.background]="getContextEntityColor(context)"
+                      [style.color]="getContextEntityContrast(context)"
+                    >
+                      {{ context.entityType }}
+                      {{ context.entityRole }}
+                    </span>
+                  </ng-container>
+                </div>
+
                 <nb-icon
                   icon="trash-2-outline"
                   status="danger"
@@ -214,6 +230,20 @@
                 class="p-2 d-flex justify-content-between font-weight-bold"
               >
                 {{ outputContext }}
+
+                <ng-container *ngFor="let context of getContextByName(outputContext)">
+                  <span
+                    *ngIf="context?.entityType"
+                    nbTooltip="Entity associated with the context"
+                    class="entity"
+                    [style.background]="getContextEntityColor(context)"
+                    [style.color]="getContextEntityContrast(context)"
+                  >
+                    {{ context.entityType }}
+                    {{ context.entityRole }}
+                  </span>
+                </ng-container>
+
                 <nb-icon
                   icon="trash-2-outline"
                   status="danger"
