feat(scenario-list): use close alert when a scenario is edited, refacto

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -76,7 +76,7 @@
             ghost
             shape="round"
             nbTooltip="Edit"
-            (click)="edit(scenario)"
+            (click)="edit($event, scenario)"
           >
             <nb-icon icon="edit-outline"></nb-icon>
           </button>
@@ -94,7 +94,7 @@
             ghost
             shape="round"
             nbTooltip="Delete"
-            (click)="delete(scenario)"
+            (click)="delete($event, scenario)"
           >
             <nb-icon icon="trash-2-outline"></nb-icon>
           </button>
