feat(scenario-designer): create new context from intent edition

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
@@ -16,6 +16,8 @@
     .contexts-list {
       overflow: auto;
       max-height: 30rem;
+      margin-right: -1rem;
+      padding-right: 1rem;
 
       .entity {
         border-radius: 0.45rem;
