--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
@@ -11,13 +11,17 @@
     z-index: 5;
     background-color: rgba($color: #ffffff, $alpha: 0.85);
     box-shadow: 2px 2px 5px rgba($color: #000000, $alpha: 0.1);
-    width: 15rem;
+    width: 17rem;
     position: absolute;
     .contexts-list {
-      overflow: auto;
+      overflow-y: auto;
       max-height: 30rem;
       margin-right: -1rem;
       padding-right: 1rem;
+
+      .context-name {
+        max-width: 12rem;
+      }
 
       .entity {
         border-radius: 0.45rem;
