--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
@@ -8,16 +8,38 @@
   overflow: hidden;
 
   .contexts-panel {
+    position: absolute;
     z-index: 5;
     background-color: rgba($color: #ffffff, $alpha: 0.85);
     box-shadow: 2px 2px 5px rgba($color: #000000, $alpha: 0.1);
-    width: 17rem;
-    position: absolute;
+    width: 2rem;
+    border-bottom-right-radius: 0.5rem;
+    transition: width 0.2s;
+
+    .panel-header-wrapper {
+      display: flex;
+      justify-content: flex-end;
+      padding: 0.5rem 0 0 0;
+      .panel-header {
+        width: 100%;
+        padding: 0.5rem;
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+        margin-right: -0.2rem;
+        .chevron-left {
+          display: none;
+        }
+        .chevron-right {
+          display: block;
+          margin-right: 0.15rem;
+        }
+      }
+    }
+
     .contexts-list {
+      display: none;
       overflow-y: auto;
       max-height: 30rem;
-      margin-right: -1rem;
-      padding-right: 1rem;
 
       .context-name {
         max-width: 12rem;
@@ -25,9 +47,41 @@
 
       .entity {
         border-radius: 0.45rem;
-        padding: 0rem 0.3rem 0.1rem 0.3rem;
+        padding: 0.3rem 0.5rem;
         font-size: 0.7rem;
         display: inline-block;
+        line-height: 1.2;
+      }
+    }
+
+    .addContextButton {
+      display: none;
+    }
+
+    &.displayed {
+      width: 17rem;
+
+      .panel-header-wrapper {
+        justify-content: flex-start;
+        padding: 0.5rem;
+        .panel-header {
+          writing-mode: initial;
+          text-orientation: initial;
+          .chevron-left {
+            display: block;
+          }
+          .chevron-right {
+            display: none;
+          }
+        }
+      }
+
+      .contexts-list {
+        display: block;
+      }
+      .addContextButton {
+        display: inherit;
+        margin: 1rem;
       }
     }
   }
